Melhoria na estilização e responsividade da barra superior

--- a/index.html
+++ b/index.html
@@ -18,24 +18,24 @@
 
             <!-- titulo e logo -->
             <div class="titulo-container">
-                <img src="assets/img/img-padrao.bmp" alt="logo REDMat" class="logo">
-                <div class="titulo">Recursos Educacionais Digitais para o Ensino da Matemática</div>
+                <img src="assets/icons/logo-cinza.png" alt="logo REDMat" class="logo">
+                <div class="titulo">Recursos&nbsp;Educacionais&nbsp;Digitais para o Ensino&nbsp;da&nbsp;Matemática</div>
             </div>
 
             <!-- botões -->
             <div class="btns">
                 <button>Home</button>
-                <button>Quem Somos</button>
-                <button>Seja Membro</button>
-                <button>Projetos de Ensino</button>
-                <button>Livros Eletrônicos</Produtos>
-                <button>Recursos Computacionais</Produtos>
+                <button>Quem<br>Somos</button>
+                <button>Seja<br>Membro</button>
+                <button>Projetos<br>de Ensino</button>
+                <button>Livros<br>Eletrônicos</Produtos>
+                <button>Recursos<br>Digitais</Produtos>
                 <button>Contato</button>
             </div>
 
             <!-- menu hamb icon -->
             <div class="hamb-icon-container">
-                <img class="hamb-icon" src="assets/img/img-padrao.bmp" alt="icone-hamburguer">
+                <img class="hamb-icon" src="assets/icons/hamb-traco.png" alt="icone-hamburguer">
             </div>
         </div>
         
