Alteração no banner por imagem

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- Fazer menu hamburguer abrir e fechar -->
 <!-- Fazer menu dos botões abrir e fechar -->
 <!-- Estudar possibilidade de JavaScript marcar a página que está sendo visitada no menu (alterando cor de fundo e sublinhando) -->
+<!-- Melhorar Banner -->
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -84,16 +85,19 @@
             </div>
         </div>
 
-        <div id="banner">
+        <!-- <div id="banner">
             
+        </div> -->
+        <div class="banner-container">
+            <img class="banner-img" src="assets/img/banner redmat.png" alt="banner">
         </div>
         <div id = "banner-txt">
             <div>
                 <!-- <h5 ></h5> -->
                 <p class="corrigir">Melhorar este banner mantendo responsivo</p>
-                <h5>Instituto de Matemática e Estatística</h5>
-                <h5>Universidade Federal Fluminense</h5>
-                <h1>REDMat</h1>
+                <h4>Instituto de Matemática e Estatística</h4>
+                <h4>Universidade Federal Fluminense</h4>
+                <!-- <h1>REDMat</h1> -->
             </div>
         </div>
 
@@ -102,8 +106,19 @@
     
     <main>
         <div class="content">
-            <h1>Conteúdo em construção</h1>
-            <h2>Titulo 2</h2>
+            <h1>O Projeto REDMat</h1>
+            <p>O projeto de monitoria REDMat (Recursos Educacionais Digitais para o ensino da Matemática) nasceu em 2021 e visa desenvolver conteúdo digital para ajudar no processo de ensino-aprendizagem do discente em disciplinas do IME. O conteúdo é apresentado de uma maneira mais moderna e interativa através de plataformas digitais e recursos computacionais. Entre aqui para entender por que é bom para o monitor atuar no projeto REDMat!</p>
+            <h2>Projetos de Ensino com participação do REDMat</h2>
+            <ul>
+                <li><img src="assets/img/img-padrao.bmp" alt="icone geogebra 3D">Geogebra 3D (2020-2021)</li>
+                <li><img src="assets/img/img-padrao.bmp" alt="icone geogebra 3D">Geogebra 3D (2020-2021)</li>
+                <li><img src="assets/img/img-padrao.bmp" alt="icone geogebra 3D">Geogebra 3D (2020-2021)</li>
+                <li><img src="assets/img/img-padrao.bmp" alt="icone geogebra 3D">Geogebra 3D (2020-2021)</li>
+                <li><img src="assets/img/img-padrao.bmp" alt="icone geogebra 3D">Geogebra 3D (2020-2021)</li>
+            </ul>
+            <p>
+
+            </p>
             <h3>Titulo 3</h3>
             <h4>Título 4</h4>
             <h5>Título 5</h5>
