Responsividade do banner em telas muito altas

--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-<!-- Fazer menu hamburguer abrir e fechar -->
-<!-- Fazer menu dos botões abrir e fechar -->
-<!-- Estudar possibilidade de JavaScript marcar a página que está sendo visitada no menu (alterando cor de fundo e sublinhando) -->
 <!-- Elaborar a seção de contato -->
-
+<!-- Adicionar footer -->
 
 <!DOCTYPE html>
 <html lang="pt-br">
