Responsividade do título na barra superior para telas pequenas. Teste em font-size definidas com rem em vez de pt.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,22 @@
             <!-- titulo e logo -->
             <div class="titulo-container">
                 <img src="assets/icons/logo-transparente.png" alt="logo REDMat" class="logo">
-                <div class="titulo">Recursos&nbsp;Educacionais&nbsp;Digitais para o Ensino&nbsp;da&nbsp;Matemática</div>
+                <div class="titulo-barra">
+                    <div class="titulo-barra-longo">
+                        <h3>Universidade Federal Fluminense</h3>
+                        <h3>Instituto de Matemática e Estatística</h3>
+                        <h2>Recursos&nbsp;Educacionais&nbsp;Digitais para o Ensino&nbsp;da&nbsp;Matemática</h2>
+                    </div>
+
+                        
+                    <div class="titulo-barra-curto">
+                        <h3>Universiade Federal Fuminense</h3>
+                        <h3>Instituto de Matemática e Estatística</h3>
+                    </div>
+
+
+                </div>
+                <!-- <div></div> -->
             </div>
 
             <!-- botões -->
