--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!-- Elaborar a seção de contato -->
 <!-- Adicionar footer -->
+<!-- Trocar visible por display none -->
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -126,7 +127,7 @@
     <main>
 
         <div class="sobre-proj">
-            <h1>Sobre o Projeto</h1>
+            <h2>Sobre o Projeto</h2>
             <p>O projeto de monitoria REDMat (Recursos Educacionais Digitais para o ensino da Matemática) nasceu em 2021 e visa desenvolver conteúdo digital para ajudar no processo de ensino-aprendizagem do discente em disciplinas do IME. O conteúdo é apresentado de uma maneira mais moderna e interativa através de plataformas digitais e recursos computacionais. Entre aqui para entender por que é bom para o monitor atuar no projeto REDMat!</p>
 
 
@@ -150,6 +151,9 @@
                     <input type="text">
                     <input type="text">
                     <input type="text">
+                    <input type="text">
+                    <button>Enviar Mensagem</button>
+                    <button>Resetar Formulário</button>
                 </div>
             </div>
 
