--- a/index.html
+++ b/index.html
@@ -145,16 +145,45 @@
                 </div>
                 <hr>
 
+
+
                 <div class="contato">
                     <h2>Contato</h2>
-                    <!-- <p>Entre em contato</p> -->
-                    <input type="text">
-                    <input type="text">
-                    <input type="text">
-                    <input type="text">
-                    <button>Enviar Mensagem</button>
-                    <button>Resetar Formulário</button>
+
+
+
+
+                    <!-- <form action="https://formsubmit.co/sergioherman@id.uff.br" method="POST">
+                        <div class="linha-form">
+                            <input type="text" placeholder="Nome" name="name">
+                            <input type="text" placeholder="E-mail" name="email">
+                        </div>
+                        <div class="linha-form">
+                            <input type="text" placeholder="Assunto" name="message">
+                        </div>
+                        <div class="linha-form">
+                            <textarea id="mensagem" class="msg" type="text" placeholder="Mensagem"></textarea>
+                        </div>
+                        <div class="linha-form">
+                            <button>Resetar Formulário</button>
+                            <button>Enviar Mensagem</button>
+                        </div>
+                    </form> -->
+
+                    <form action="https://formsubmit.co/sergioherman@id.uff.br" method="POST">
+                        <input type="text" name="name" required />
+                        <input type="email" name="email" required />
+                        <button type="submit">Send</button>
+                    </form>
+                
+
+
+
+
                 </div>
+
+
+
             </div>
 
         </div>
