--- a/index.html
+++ b/index.html
@@ -159,15 +159,17 @@
                             <input type="text" placeholder="E-mail" name="email">
                         </div>
                         <div class="linha-form">
-                            <input type="text" placeholder="Assunto" name="message">
+                            <input type="text" placeholder="Assunto" name="_subject">
                         </div>
+                        <input type="hidden" name="_captcha" value="false">
                         <div class="linha-form">
-                            <textarea id="mensagem" class="msg" type="text" placeholder="Mensagem"></textarea>
+                            <textarea id="mensagem" class="msg" type="text" placeholder="Mensagem"></textarea name="message">
                         </div>
                         <div class="linha-form">
                             <button>Resetar Formulário</button>
                             <button>Enviar Mensagem</button>
                         </div>
+                        <input type="hidden" name="_next" value="https://redmatuff.github.io/site/">
                     </form>
 
                     <!-- <form action="https://formsubmit.co/sergioherman@id.uff.br" method="POST">
