teste de formulario

--- a/index.html
+++ b/index.html
@@ -159,11 +159,11 @@
                             <input type="text" placeholder="E-mail" name="email">
                         </div>
                         <div class="linha-form">
-                            <!-- <input type="text" placeholder="Assunto" name="_subject"> -->
+                            <input type="text" placeholder="Assunto" name="_subject">
                         </div>
                         <input type="hidden" name="_captcha" value="false">
                         <div class="linha-form">
-                            <textarea id="mensagem" class="msg" type="text" placeholder="Mensagem"></textarea name="message">
+                            <textarea id="mensagem" class="msg" type="text" placeholder="Mensagem" name="message"></textarea>
                         </div>
                         <div class="linha-form">
                             <button>Resetar Formulário</button>
