correção de bug na exibição do menu em telas estreitas

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!-- Elaborar a seção de contato -->
-<!-- Adicionar footer -->
-<!-- Trocar visible por display none -->
+<!-- Implementar botão de resetar formulário -->
+<!-- Adição de links -->
 
 <!DOCTYPE html>
 <html lang="pt-br">
