Novo banner mais sofisticado

--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!-- Implementar botão de resetar formulário -->
-<!-- Adição de links -->
+<!-- Obrigar colocar um e-mail no formulário para poder clicar em enviar -->
+<!-- Exibir mensagem mostranso que a mensagem foi enviada corretamente ou não (caso e-mail nao tenha sido adicionado) -->
+<!-- Voltar com a mensagem no formulário caso a mensagem não tenha sido enviada -->
+
+<!-- Adição de links externos no footer-->
+<!-- Limpeza e organização do código -->
+<!-- Criação de outras páginas -->
+<!-- Adição de links internos para outras páginas -->
+
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -103,7 +111,7 @@
             
         </div> -->
         <div class="banner-container">
-            <img class="banner-img" src="assets/img/banner redmat vede.png" alt="banner">
+            <img class="banner-img" src="assets/img/banner-redmat V5.png" alt="banner">
             <div class="banner-txt-container">
 
                 <div id = "banner-txt">
