--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             
         </div> -->
         <div class="banner-container">
-            <img class="banner-img" src="assets/img/banner-redmat V5.png" alt="banner">
+            <img class="banner-img" src="assets/img/banner-redmat V5 brilho.png" alt="banner">
             <div class="banner-txt-container">
 
                 <div id = "banner-txt">
