JavaScript não ira recarregar ao redimensionar tela

--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- Problema no Javascript: O menu não se mantém aberto após scroll em telas de celular -->
+<!-- Scroll no celular está recarregando a página e fazendo o menu fechar -->
 <!-- Limpeza e organização do código -->
 <!-- Criação de outras páginas -->
 <!-- Adição de links internos para outras páginas -->
@@ -23,7 +25,7 @@
     
 
 
-    
+
 
     <header>
 
