Melhoria no JavaScript fazendo aparecer o X no menu hamburguer, remoção de código desnecessário, organização de código, tentativa de remover bug no scroll fechando menu em tela de celular

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<!-- Problema no Javascript: O menu não se mantém aberto após scroll em telas de celular -->
-<!-- Scroll no celular está recarregando a página e fazendo o menu fechar -->
+<!-- BUG: Problema no Javascript: O menu não se mantém aberto após scroll em telas de celular -->
+
 <!-- Limpeza e organização do código -->
 <!-- Criação de outras páginas -->
 <!-- Adição de links internos para outras páginas -->
@@ -180,7 +180,7 @@
 
             <!-- Header 2.2. Textos do Banner -->
             <div class="banner-txt-container">
-                <div id = "banner-txt">
+                <div class = "txt-banner">
                     <a href="https://www.uff.br/">                   
                         <h4>Universidade Federal Fluminense</h4>
                     </a>
@@ -202,6 +202,8 @@
 
 
 
+
+    
 
 
     
