--- a/pages/pag-padrao.html
+++ b/pages/pag-padrao.html
@@ -9,26 +9,19 @@
     <link rel="stylesheet" href="../assets/css/header.css">
     <link rel="stylesheet" href="../assets/css/main.css">
     <link rel="stylesheet" href="../assets/css/footer.css">
-    <link rel="stylesheet" href="../assets/css/seja-membro.css">
+    <link rel="stylesheet" href="../assets/css/quem-somos.css">
 </head>
 
 <body>
     <header></header>
         
     <main>
-
         <section class="sobre">
-            <h2>O que é REDMat</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid ipsam laudantium dolore culpa tempora? Quam quos quae magni soluta ab incidunt veniam, voluptatem hic corporis assumenda maiores atque labore consequuntur!</p>
+
         </section>
         <section class="content">
-            <h2>Por que se tornar membro</h2>
-            <p>Benefícios para o monitor</p>
-            <h2>Como se tornar membro</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae magni nesciunt nulla commodi nisi, debitis totam, facere distinctio voluptas voluptatibus tempore possimus magnam similique. Iste, beatae placeat. Odio, quaerat accusamus!</p>
-        </section>
-        
 
+        </section>
     </main>
 
     <footer></footer>
