remoção de bugs em caminhos do index

--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -18,7 +18,7 @@
     <main>
 
         <section class="sobre">
-            <h2>Importancia dos Recursos Digitais</h2>
+            <h2>Importância dos Recursos Digitais</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid ipsam laudantium dolore culpa tempora? Quam quos quae magni soluta ab incidunt veniam, voluptatem hic corporis assumenda maiores atque labore consequuntur!</p>
         </section>
         <section class="content">
