adição de links, melhoria na estruturação das novas páginas, teste de disposição de textos e imagens na pagina de recussos (edo)

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <!-- BUG: Javascript nao monta o menu corretamenta apos resize -->
 <!-- BUG: Home com bug nos links no menu -->
 
+<!-- Seguir o modelo em "recursos - EDO" para outras partes do site (verificar responsividade, se é viável, se é ok) -->
+
 <!-- Limpeza e organização do código -->
 <!-- Criação de outras páginas -->
 <!-- Adição de links internos para outras páginas -->
@@ -40,11 +42,37 @@
                 <div class="equipes">
                     <h2>Equipes</h2>    
                     <ul>
-                        <li><img src="assets/icons/pessoas-icone.png" alt="icone geogebra 3D"><p>2024</p></li>
-                        <li><img src="assets/icons/pessoas-icone.png" alt="icone geogebra 3D"><p>2023</p></li>
-                        <li><img src="assets/icons/pessoas-icone.png" alt="icone geogebra 3D"><p>2022</p></li>
-                        <li><img src="assets/icons/pessoas-icone.png" alt="icone geogebra 3D"><p>2021</p></li>
-                        <li><img src="assets/icons/pessoas-icone.png" alt="icone geogebra 3D"><p>2020</p></li>
+
+                        <li>
+                            <a href="pages/quem-somos.html#eq2024">
+                                <img src="assets/icons/pessoas-icone.png" alt="icone pessoas"><p>2024</p>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="pages/quem-somos.html#eq2023">
+                                <img src="assets/icons/pessoas-icone.png" alt="icone pessoas"><p>2023</p>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="pages/quem-somos.html#eq2022">
+                                <img src="assets/icons/pessoas-icone.png" alt="icone pessoas"><p>2022</p>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="pages/quem-somos.html#eq2021">
+                                <img src="assets/icons/pessoas-icone.png" alt="icone pessoas"><p>2021</p>
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="pages/quem-somos.html#eq2020">
+                                <img src="assets/icons/pessoas-icone.png" alt="icone pessoas"><p>2020</p>
+                            </a>
+                        </li>
+
                     </ul>
                 </div>
                 <hr>
