--- a/pages/quem-somos.html
+++ b/pages/quem-somos.html
@@ -19,11 +19,31 @@
         <section class="sobre">
             <h2>O que é REDMat</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid ipsam laudantium dolore culpa tempora? Quam quos quae magni soluta ab incidunt veniam, voluptatem hic corporis assumenda maiores atque labore consequuntur!</p>
-
+            <div class="apenas-desktop">
+            <!-- Colocar aqui uma informação que só aparece em telas grandes -->
+            </div>
         </section>
         <section class="content">
             <h2>História do projeto</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae magni nesciunt nulla commodi nisi, debitis totam, facere distinctio voluptas voluptatibus tempore possimus magnam similique. Iste, beatae placeat. Odio, quaerat accusamus!</p>
+            <hr>
+            <h3>Equipes</h3>
+            <p>Texto sobre as equipes</p>
+            <hr>
+            <h4 id="eq2020">2020</h4>
+            <p>Comentário sobre a equipe e o que cada membro produziu</p>
+            <hr>
+            <h4 id="eq2021">2021</h4>
+            <p>Comentário sobre a equipe e o que cada membro produziu</p>
+            <hr>
+            <h4 id="eq2022">2022</h4>
+            <p>Comentário sobre a equipe e o que cada membro produziu</p>
+            <hr>
+            <h4 id="eq2023">2023</h4>
+            <p>Comentário sobre a equipe e o que cada membro produziu</p>
+            <hr>
+            <h4 id="eq2024">2024</h4>
+            <p>Comentário sobre a equipe e o que cada membro produziu</p>
         </section>
     </main>
 
