--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -60,10 +60,13 @@
                 <div class="recurso-container">
                     <div class="img-container">
                         <img src="../assets/img/img-padrao.bmp" alt="Equações Diferenciais Ordinárias">
-                    </div>
-                    <div class="recurso-descricao">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, perspiciatis. Nobis numquam nam sunt iure officiis hic unde qui rem pariatur, adipisci magnam libero beatae, ratione facere repellendus doloribus. Culpa.</p>
                     </div>
+                    <!-- <div class="recurso-descricao">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, perspiciatis. Nobis numquam nam sunt iure officiis hic unde qui rem pariatur, adipisci magnam libero beatae, ratione facere repellendus doloribus. Culpa.</p>
+                    </div> -->
                 </div>
 
             </section>
