tentativa de remoção de bug em paths no header e footer

--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -33,6 +33,8 @@
                     </div>
                 </div>
             </section>
+            <hr>
+
             <section id="calc-func-uma-var">
                 <h2>Cálculo de Funções de Uma Variável</h2>
                 <div class="recurso-container">
@@ -44,6 +46,8 @@
                     </div>
                 </div>
             </section>
+            <hr>
+
             <section id="calc-func-varias-var">
                 <h2>Cálculo de Funções de Várias Variável</h2>
                 <div class="recurso-container">
@@ -55,20 +59,23 @@
                     </div>
                 </div>
             </section>
+            <hr>
+
             <section id="edo">
                 <h2>Equações Diferenciais Ordinárias</h2>
                 <div class="recurso-container">
                     <div class="img-container">
                         <img src="../assets/img/img-padrao.bmp" alt="Equações Diferenciais Ordinárias">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, perspiciatis. Nobis numquam nam sunt iure officiis hic unde qui rem pariatur, adipisci magnam libero beatae, ratione facere repellendus doloribus. Culpa.</p>
+                        <div class="recurso-descricao">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, perspiciatis. Nobis numquam nam sunt iure officiis hic unde qui rem pariatur, adipisci magnam libero beatae, ratione facere repellendus doloribus. Culpa.</p>
+                        </div>
                     </div>
                     <!-- <div class="recurso-descricao">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, perspiciatis. Nobis numquam nam sunt iure officiis hic unde qui rem pariatur, adipisci magnam libero beatae, ratione facere repellendus doloribus. Culpa.</p>
                     </div> -->
                 </div>
-
             </section>
 
 
