--- a/index.html
+++ b/index.html
@@ -1,14 +1,8 @@
-<!-- BUG: Problema no Javascript: O menu não se mantém aberto após scroll em telas de celular -->
-<!-- BUG: Javascript nao monta o menu corretamenta apos resize -->
-<!-- BUG: Home com bug nos links no menu -->
-
-<!-- Seguir o modelo em "recursos - EDO" para outras partes do site (verificar responsividade, se é viável, se é ok) -->
-
+<!-- BUG: Javascript nao monta o menu corretamenta apos resize, menu fica aparecendo ao reduzir a tela -->
+<!-- Seguir o modelo em "recursos - EDO" para outras partes do site removendo barras de rolagem e verificar responsividade, se é viável, etc. -->
+<!-- trocar a tag img-container para outra que faça mais sentido ou talvez até apagar ela. -->
 <!-- Limpeza e organização do código -->
-<!-- Criação de outras páginas -->
 <!-- Adição de links internos para outras páginas -->
-<!-- Consertar Javascript do menu de modo que ao passar o mouse em cima já abre o menu do botão -->
-<!-- Consertar o Javascipt de modo que ao tirar o cursor, o menu feche-->
 
 
 <!DOCTYPE html>
