padronização das paginas

--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -24,12 +24,16 @@
         <section class="content">
             <section id="func-uma-var">
                 <h2>Funções de Uma Variável</h2>
+                <h5>Monitores:</h5>
+                <h6>Data: --/----</h6>
                 <div class="recurso-container">
-                    <div class="img-container">
+                    <div>
                         <img src="../assets/img/img-padrao.bmp" alt="Funções de Uma Variável">
-                    </div>
-                    <div class="recurso-descricao">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                        <div class="recurso-descricao">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur corrupti inventore repudiandae fugit atque pariatur ab, enim, recusandae quisquam soluta non accusamus vitae expedita repellendus consequatur vel reprehenderit perferendis facilis.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum modi nemo beatae quidem explicabo fuga ipsa voluptas aliquid amet ut, ad enim nostrum nesciunt iusto architecto atque. Ratione, quae qui! Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus aspernatur sunt temporibus cumque praesentium itaque id, porro, architecto dolore eius laboriosam cum error aperiam soluta, magnam illo delectus ut. Cupiditate. Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque omnis totam quibusdam fugiat alias fugit ducimus mollitia, ut assumenda consectetur porro magni voluptas explicabo quasi? Obcaecati eum reiciendis quo itaque.</p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -38,11 +42,12 @@
             <section id="calc-func-uma-var">
                 <h2>Cálculo de Funções de Uma Variável</h2>
                 <div class="recurso-container">
-                    <div class="img-container">
+                    <div>
                         <img src="../assets/img/img-padrao.bmp" alt="Cálculo de Funções de Uma Variável">
-                    </div>
-                    <div class="recurso-descricao">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                    
+                        <div class="recurso-descricao">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -51,11 +56,11 @@
             <section id="calc-func-varias-var">
                 <h2>Cálculo de Funções de Várias Variável</h2>
                 <div class="recurso-container">
-                    <div class="img-container">
+                    <div>
                         <img src="../assets/img/img-padrao.bmp" alt="Cálculo de Funções de Várias Variável">
-                    </div>
-                    <div class="recurso-descricao">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                        <div class="recurso-descricao">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -64,17 +69,14 @@
             <section id="edo">
                 <h2>Equações Diferenciais Ordinárias</h2>
                 <div class="recurso-container">
-                    <div class="img-container">
+                    <div>
                         <img src="../assets/img/img-padrao.bmp" alt="Equações Diferenciais Ordinárias">
                         <div class="recurso-descricao">
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
                             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, perspiciatis. Nobis numquam nam sunt iure officiis hic unde qui rem pariatur, adipisci magnam libero beatae, ratione facere repellendus doloribus. Culpa.</p>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus consequuntur, architecto delectus, qui laudantium nisi debitis et blanditiis cumque nobis tempora doloremque, adipisci rerum sed pariatur earum ullam? Architecto, animi!</p>
                         </div>
                     </div>
-                    <!-- <div class="recurso-descricao">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis saepe provident mollitia? Tempora mollitia id libero maxime officia quae dolores nesciunt corrupti! Molestiae, non nulla accusantium fugit dignissimos facilis laborum?</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, perspiciatis. Nobis numquam nam sunt iure officiis hic unde qui rem pariatur, adipisci magnam libero beatae, ratione facere repellendus doloribus. Culpa.</p>
-                    </div> -->
                 </div>
             </section>
 
