remoção de bug no formulário

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!-- BUG: Javascript nao monta o menu corretamenta apos resize, menu fica aparecendo ao reduzir a tela -->
 <!-- Limpeza e organização do código -->
 <!-- Adição de links internos para outras páginas -->
+<!-- Deixar o site mais leve reduzindo os tamanhos das imagens -->
 
 
 <!DOCTYPE html>
@@ -91,7 +92,7 @@
                         <div class="linha-form">
                             <button>Enviar Mensagem</button>
                         </div>
-                        <input type="hidden" name="_next" value="https://redmatuff.github.io/pages/msg-enviada.html">
+                        <input type="hidden" name="_next" value="pages/msg-enviada.html">
                     </form>
              
 
