página de mensagem enviada

--- a/pages/msg-enviada.html
+++ b/pages/msg-enviada.html
@@ -11,12 +11,33 @@
     <!-- <link rel="stylesheet" href="../assets/css/index.css"> -->
 </head>
 <body>
-    
+
+    <header></header>
+
     <main>
-        <h2>Mensagem Enviada com Sucesso</h2>
-        <p>Obrigado!</p>
-        <a href="../index.html">Voltar</a>
+        <section class="sobre">
+            <h2>Título</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi fugiat voluptatem, odio temporibus modi fuga quasi laudantium ut eos repellendus magnam ullam quae, tempore nam unde incidunt, minima nulla ducimus.</p>
+        </section>
+        <section class="content">
+            <h2>Obrigado!</h2>
+            <h2>Mensagem Enviada com Sucesso</h2>
+            <p>Em breve retornaremos seu contato!</p>
+
+            <img src="../assets/img/img-padrao.bmp" alt="msg-enviada">
+            
+            <a href="../index.html">
+                <h4>Ir para Página Inicial</h4>
+            </a>
+        </section>
     </main>
+
+    <footer></footer>
+
+    <script src="../assets/js/insere-header.js"></script>
+    <script src="../assets/js/menu.js"></script>
+    <script src="../assets/js/insere-footer.js"></script>
+
 
 </body>
 </html>
