página de mensagem enviada

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <div class="linha-form">
                             <button>Enviar Mensagem</button>
                         </div>
-                        <input type="hidden" name="_next" value="pages/msg-enviada.html">
+                        <input type="hidden" name="_next" value="https://redmatuff.github.io/site/pages/msg-enviada.html">
                     </form>
              
 
