--- a/pages/contato.html
+++ b/pages/contato.html
@@ -24,7 +24,7 @@
                 <!-- Colocar aqui uma informação que só aparece em telas grandes -->
             </div>
         </section>
-        
+
         <section class="content">
 
             <h3>Formulário para você deixar sua mensagem</h3>
@@ -43,7 +43,7 @@
                 <div class="linha-form">
                     <button>Enviar Mensagem</button>
                 </div>
-                <input type="hidden" name="_next" value="https://redmatuff.github.io/pages/msg-enviada.html">
+                <input type="hidden" name="_next" value="https://redmatuff.github.io/site/pages/msg-enviada.html">
             </form>
         </section>
     </main>
