comentarios no index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- BUG: Javascript nao monta o menu corretamenta apos resize, menu fica aparecendo ao reduzir a tela -->
 <!-- Limpeza e organização do código -->
-<!-- Adição de links internos para outras páginas -->
 <!-- Deixar o site mais leve reduzindo os tamanhos das imagens -->
+<!-- Adição de links externos, conteúco, e imagens -->
 
 
 <!DOCTYPE html>
