--- a/pages/recursos.html
+++ b/pages/recursos.html
@@ -36,7 +36,7 @@
                           </a>
                           
                        
-                            <p>Playlist no youube dos vídeos que demonstram as propriedadas das funções trigonométricas</p>
+                            <p>Playlist no youtube dos vídeos que demonstram as propriedadas das funções trigonométricas</p>
                             </div>
                     <div class="recurso-descricao">
                             <a href="https://redmatuff.github.io/FichasTrigonometricas/Fun%C3%A7%C3%A3oSeno/index.html" target="_blank">
