Reestruturação da página de recursos.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <!-- Adição de links externos, conteúdo, e imagens -->
 <!-- remover console.log dos JavaScripts -->
 <!-- Remover comentários inúteis e adicionar comentários importantes -->
+<!-- Estilizar hr especial no css -->
 
 <!DOCTYPE html>
 <html lang="pt-br">
